Fix multiple attachments upload and profile img extensions && Add scrollbar on emoji list

--- a/web/src/css/style.css
+++ b/web/src/css/style.css
@@ -442,26 +442,34 @@
 #chat-container::-webkit-scrollbar,
 #channel-list::-webkit-scrollbar,
 #activity-list::-webkit-scrollbar,
-#user-list::-webkit-scrollbar {
+#user-list::-webkit-scrollbar,
+.emoji-container::-webkit-scrollbar {
   width: 8px;
   margin-left: 10px;
   border-radius: 5px;
 }
+
 #chat-container::-webkit-scrollbar-thumb,
 #channel-list::-webkit-scrollbar-thumb,
 #user-list::-webkit-scrollbar-thumb,
-#activity-list::-webkit-scrollbar-thumb {
+#activity-list::-webkit-scrollbar-thumb,
+.emoji-container::-webkit-scrollbar-thumb {
   background-color: #212222;
   border-radius: 6px;
 }
+
 #chat-container::-webkit-scrollbar-track,
-#user-list::-webkit-scrollbar-track #activity-list::-webkit-scrollbar-track {
+#user-list::-webkit-scrollbar-track,
+#activity-list::-webkit-scrollbar-track,
+.emoji-container::-webkit-scrollbar-track {
   background-color: #2b2d31;
   border-radius: 5px;
 }
+
 #channel-list::-webkit-scrollbar-track {
   background-color: #2f3136;
 }
+
 @supports (-moz-appearance: none) {
   #chat-container {
     scrollbar-width: auto;
@@ -2114,7 +2122,8 @@ textarea::-webkit-scrollbar-track {
 
 .emoji-container {
   color: #d8d8db;
-  font-size: lighter;
+  font-size: smaller;
+  overflow-y: auto;
   margin-left: 20px;
   max-width: 70%;
   width: 100%;
